removed border from hero image and width, which fixed the horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,16 @@
 
 .bgImg {
     background: url("../images/header.jpg") no-repeat;
-    width: 100vw;
     height: 100vh;
     background-position: center center;
     background-size:cover; 
-    border: 10px solid rgba(0, 0, 0, 0.4)
 }
 
 .jumbotron {
+    position: relative;
     background: transparent;
-    width: 100vw;
     height: 100vh;
+    overflow: hidden;
 }
 
 .history img {
